--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.735.0",
     "@aws-sdk/lib-storage": "^3.735.0",
+    "@types/connect-mongo": "^3.1.6",
     "@types/multer": "^1.4.12",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
